--- a/.github/workflows/expo.yml
+++ b/.github/workflows/expo.yml
@@ -1,4 +1,4 @@
-name: build and push
+name: build and upload
 on:
   push:
     branches:
@@ -13,6 +13,8 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '16'
+      - run: rm package-lock.json yarn.lock
+      - run: yarn install
       - name: build
         id: build-expo
         uses: nzws/turtle-action@master
@@ -20,6 +22,7 @@ jobs:
           build-os: 'android'
           expo-sdk-version: '42.0.0'
         env:
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
           EXPO_USERNAME: ${{ secrets.EXPO_USERNAME }}
           EXPO_PASSWORD: ${{ secrets.EXPO_PASSWORD }}
           EXPO_ANDROID_KEYSTORE_BASE64: ${{ secrets.KEYSTORE }}
