--- a/.github/workflows/expo.yml
+++ b/.github/workflows/expo.yml
@@ -17,8 +17,14 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: '8'
+          cache: 'gradle'
       - run: rm package-lock.json yarn.lock
       - run: yarn install
+      - uses: actions/cache@v2
+        id: turtle-cache
+        with:
+          path: ~/.turtle
+          key: ${{ runner.os }}-turtle
       - name: build
         id: build-expo
         uses: nzws/turtle-action@master
@@ -43,5 +49,5 @@ jobs:
         with:
           prerelease: true
           artifacts: ${{ steps.build-expo.outputs.asset-path }}
-          commit: ${{ github.head_ref }}
+          commit: 'dev'
           token: ${{ secrets.GITHUB_TOKEN }}
